data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1311.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7f\60\00\00\02\98\80\80\80\00\01\03\65\6e"
    "\76\10\65\78\74\65\72\6e\61\6c\46\75\6e\63\74\69"
    "\6f\6e\00\00\03\82\80\80\80\00\01\01\07\88\80\80"
    "\80\00\01\04\74\65\73\74\00\01\0a\92\80\80\80\00"
    "\01\8c\80\80\80\00\00\02\7f\10\00\41\2a\0c\00\0b"
    "\1a\0b"
  )
""
)